# HummingBird

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/scripts/: askpass.sh
HummingBirdCore/: .clang-tidy  CMakeLists.txt
HummingBirdCore/src/: Application.cpp  Application.h  ApplicationObject.h  CoreRef.h  Folder.h  Log.cpp  Log.h  Updatable.h  main.cpp
HummingBirdCore/src/GeneralTools/: FileDialog.h
HummingBirdCore/src/GeneralTools/TextEditting/: TextEditorWindow.cpp  TextEditorWindow.h
HummingBirdCore/src/Logging/: ImGuiLogSink.h  MainLogSink.h
HummingBirdCore/src/PCH/: pch.h  pchmac.h
HummingBirdCore/src/Rendering/: Texture.cpp  Texture.h
HummingBirdCore/src/Security/: LogInWindow.cpp  LogInWindow.h  LoginManager.cpp  LoginManager.h
HummingBirdCore/src/Sql/: SqlConnection.cpp  SqlConnection.h  SqlExample.h  SqlImportWindow.cpp  SqlImportWindow.h  SqlManager.cpp  SqlManager.h  SqlWindow.cpp  SqlWindow.h
HummingBirdCore/src/System/: LaunchDaemonsManager.cpp  LaunchDaemonsManager.h  SysInfo.cpp  SysInfo.h  SysInfoWindow.cpp  SysInfoWindow.h
HummingBirdCore/src/System/Hosts/: EditHostsWindow.cpp  EditHostsWindow.h
HummingBirdCore/src/Terminal/: TerminalWindow.cpp  TerminalWindow.h
HummingBirdCore/src/UIWindows/: ContentExplorer.cpp  ContentExplorer.h  DebugWindow.h  LogWindow.h  MainMenuBar.cpp  MainMenuBar.h  UIWindow.h  WindowManager.cpp  WindowManager.h
HummingBirdCore/src/UIWindows/Themes/: ThemeManager.cpp  ThemeManager.h  Themes.cpp  Themes.h
HummingBirdCore/src/UIWindows/Widget/: AllAddonsWidget.h  DataViewer.h  MetricsWidget.h
HummingBirdCore/src/Utils/: Input.h  UIUtils.h  UUID.h  Utils.h
HummingBirdCore/src/Utils/Plist/: PlistUtil.h
HummingBirdFront/: CMakeLists.txt  main.cpp
HummingBirdFront/cmake/: findhummingbirdcore.cmake
HummingBirdPluginExample/: CMakeLists.txt
HummingBirdPluginExample/include/: IPlugin.h
HummingBirdPluginExample/src/: PluginExample.cpp  PluginExample.h  PluginExampleWindow.h
HummingBirdPluginManager/: CMakeLists.txt
HummingBirdPluginManager/include/: IPlugin.h
HummingBirdPluginManager/src/: PluginManager.cpp  PluginManager.h  PluginManagerWindow.h
HummingBirdTestPlugin/: CMakeLists.txt
HummingBirdTestPlugin/TestPlugin/: TestPlugin.cpp
Plugins/: README.md  libHUMMINGBIRD_PLUGIN_EXAMPLE.dylib  libHUMMINGBIRD_PLUGIN_SYSINFO.dylib  libHUMMINGBIRD_PLUGIN_TEMPLATE.dylib
cmake/: CMakeLists.txt  findMysql.cmake  fmt.cmake  spdlog.cmake
docs/: samples and urls.md
src/: Application.cpp  Application.h  Log.cpp  Log.h  main.cpp  terminal_helper_example.h
src/GeneralTools/: FileDialog.h
src/GeneralTools/TextEditting/: TextEditorWindow.cpp  TextEditorWindow.h
src/Rendering/: Texture.cpp  Texture.h
src/Security/: LogInWindow.cpp  LogInWindow.h  LoginManager.cpp  LoginManager.h
src/Sql/: SqlConnection.cpp  SqlConnection.h  SqlExample.h  SqlManager.cpp  SqlManager.h
src/System/Hosts/: EditHosts.cpp  EditHosts.h  EditHostsWindow.cpp  EditHostsWindow.h
src/Terminal/: TerminalWindow.cpp  TerminalWindow.h
src/UIWindows/: TerminalWindow.cpp  TerminalWindow.h  UIWindow.h
src/UIWindows/Themes/: ThemeManager.cpp  ThemeManager.h  Themes.h
src/Utils/: Utils.h
