#cmake_minimum_required(VERSION 3.24.4)
#project(HUMMINGBIRD_PLUGIN_EXAMPLE)
#set(CMAKE_CXX_STANDARD 23)
#
#if(NOT DEFINED HUMMINGBIRD_PLUGIN_DIR)
#    set(HUMMINGBIRD_PLUGIN_EXAMPLE_DIR ${CMAKE_CURRENT_BINARY_DIR})
#else()
#    set(HUMMINGBIRD_PLUGIN_EXAMPLE_DIR ${HUMMINGBIRD_PLUGIN_DIR}/EXAMPLE)
#endif()
#
#message(STATUS "HUMMINGBIRD_PLUGIN_EXAMPLE_DIR: ${HUMMINGBIRD_PLUGIN_EXAMPLE_DIR}")
#
#add_library(HUMMINGBIRD_PLUGIN_EXAMPLE SHARED
#        src/PluginExample.cpp src/PluginExample.h src/PluginExampleWindow.h)
#target_include_directories(HUMMINGBIRD_PLUGIN_EXAMPLE PRIVATE include)
#
#set_target_properties(HUMMINGBIRD_PLUGIN_EXAMPLE PROPERTIES
#        LIBRARY_OUTPUT_DIRECTORY "${HUMMINGBIRD_PLUGIN_DIR}"
#)
#
##enable IMGUI_ENABLE_STDLIB_SUPPORT
#target_link_libraries(HUMMINGBIRD_PLUGIN_EXAMPLE PUBLIC HBUI)
cmake_minimum_required(VERSION 3.24.4)
project(HUMMINGBIRD_PLUGIN_EXAMPLE)
set(CMAKE_CXX_STANDARD 23)

if(NOT DEFINED HUMMINGBIRD_PLUGIN_DIR)
    set(HUMMINGBIRD_PLUGIN_EXAMPLE_DIR ${CMAKE_CURRENT_BINARY_DIR}/EXAMPLE)
else()
    set(HUMMINGBIRD_PLUGIN_EXAMPLE_DIR ${HUMMINGBIRD_PLUGIN_DIR}/EXAMPLE)
endif()

message(STATUS "HUMMINGBIRD_PLUGIN_EXAMPLE_DIR: ${HUMMINGBIRD_PLUGIN_EXAMPLE_DIR}")

add_library(HUMMINGBIRD_PLUGIN_EXAMPLE SHARED
        src/PluginExample.cpp src/PluginExample.h src/PluginExampleWindow.h)
target_include_directories(HUMMINGBIRD_PLUGIN_EXAMPLE PRIVATE include)

set_target_properties(HUMMINGBIRD_PLUGIN_EXAMPLE PROPERTIES
        LIBRARY_OUTPUT_DIRECTORY "${HUMMINGBIRD_PLUGIN_EXAMPLE_DIR}"
)

#enable IMGUI_ENABLE_STDLIB_SUPPORT
target_link_libraries(HUMMINGBIRD_PLUGIN_EXAMPLE PUBLIC HBUI)
